feat: add disclosure option to callout
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -14,7 +14,7 @@ If you're already familiar with DnD Kit, or just want to see code examples, jump
 
 Let's begin!
 
-<Callout intent="info" heading="Intended Audience">
+<Callout intent="info" heading="Intended Audience" dropdown>
   This article assumes you have a basic understanding of React and Typescript.
   If you're new to React, I recommend reading
   [this](https://reactjs.org/docs/getting-started.html) and
